--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <p id="milliseconds">000</p>
         </div>
         <div class="box-bottons">
-          <button value="start">Start</button>
-          <button value="pause">Pause</button>
-          <button value="reset">Reset</button>
+          <button value="start" id="start">Start</button>
+          <button value="pause" id="pause" disabled>Pause</button>
+          <button value="reset" id="reset" disabled>Reset</button>
         </div>
       </div>
     </section>
