Se agrega funcionalidad de Lap.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <div class="box-bottons">
           <button value="start" id="start">Start</button>
           <button value="pause" id="pause" disabled>Pause</button>
+          <button value="lap" id="lap" disabled>Lap</button>
           <button value="reset" id="reset" disabled>Reset</button>
+        </div>
+        <div class="box-lap">
+          <p id="time-lap"></p>
         </div>
       </div>
     </section>
